<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/prSettingsTitle">
    <ListPreference
	android:title="@string/prMapZoomLevel"
	android:summary="%s"
	android:key="prefMapZoomLevel"
	android:defaultValue="15"
	android:entries="@array/prefMapZoomLevelEntries"
	android:entryValues="@array/prefMapZoomLevelEntries"
	/>

    <Preference
	android:title="@string/prRouteSearchOptions"
	android:defaultValue="all"
	android:summary=""
	android:key="prefRouteSearchOptions"
	/>

    <ListPreference
	android:title="@string/prTimeType"
	android:key="prefTimeType"
	android:defaultValue="@string/prTimeTypeValuesDeparture"
	android:entries="@array/prTimeTypeEntries"
	android:entryValues="@array/prTimeTypeValues"
	android:summary="%s"
	/>

    <ListPreference
	android:title="@string/prWalkingSpeed"
	android:summary="%s"
	android:key="prefWalkingSpeed"
	android:defaultValue="1"
	android:entries="@array/prefWalkingSpeedEntries"
	android:entryValues="@array/prefWalkingSpeedValues"
	/>
  </PreferenceCategory>
</PreferenceScreen>
