<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
  >

  <!-- from -->
  <com.omareitti.LocationSelector
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/fromLocation"
  />

  <!-- to -->
  <com.omareitti.LocationSelector
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/toLocation"
  />

  <!-- date, time and now -->
  <com.omareitti.DateTimeSelector
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/dateTime"
  />

  <!-- departure and arrival -->
  <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      android:id="@+id/departureArrival"
      android:checkedButton="@+id/radioDeparture"
    >
    <RadioButton
        android:id="@+id/radioDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/maRadioDeparture"
    />
    <RadioButton
        android:id="@+id/radioArrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/maRadioArrival"
    />
  </RadioGroup
  >

  <!-- search and more -->
  <LinearLayout
      android:padding="3dip"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
    >

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:text="@string/maBtnSearch"
        android:layout_weight="1"
    />
<!--	    android:drawableLeft="@android:drawable/ic_menu_search" -->
    <Button
        android:text="@string/maMoreOptions"
        android:id="@+id/MainAppMoreOptions"
        android:layout_height="wrap_content"
        android:layout_width="50dip"
    />
  </LinearLayout
  >

  <!-- history -->

  <ScrollView
      android:id="@+id/scroller"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:fillViewport="true"
      android:windowSoftInputMode="stateHidden"
    >

    <TabHost
        android:id="@+id/TabHost01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        >
	<TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
	<FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          >
	  <ListView
              android:id="@+id/myPlacesList"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
          />
	  <ListView
              android:id="@+id/myRoutesList"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
          />
	</FrameLayout
        >
      </LinearLayout
      >
    </TabHost
    >
  </ScrollView
  >
</LinearLayout
>
